# capsimage

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.txt  libcapsimage.pc.in
.github/workflows/: linux-ci.yml  macos-ci.yml  windows-ci.yml
capsimg_source_linux_macosx/Core/: CommonTypes.h
capsimg_source_windows/CAPSImg/: stdafx.h
capsimg_source_windows/Core/: DiskFile.cpp
cmake/: FindCapsImage.cmake
src/CAPSImg/: CAPSImg.vcxproj  stdafx.h
src/Core/: CommonTypes.h
src/LibIPF/: CapsFDC.h  ComLib.h
